--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <main>
         <!-- button section  -->
         <div class="text-center ">
-            <button onclick="loadData()"  id="all-button" class="btn lg:px-10 mx-5">All</button>
-            <button id="music-button" class="btn lg:px-10">Music</button>
+            <button onclick="loadAllData()" id="all-button" class="btn lg:px-10 mx-5">All</button>
+            <button  id="music-button" class="btn lg:px-10">Music</button>
             <button id="comedy-button" class="btn lg:px-10 lg:mx-5">Comedy</button>
             <button id="drawing-button" class="btn lg:px-10">Drawing</button>
         </div>
@@ -43,7 +43,13 @@
                 
             </div>
         </section>
+
+
+        
+
+
     </main>
-    <script src="js/index.js"></script>
+    <script src="js/all.js"></script>
+    <script src="js/music.js"></script>
 </body>
 </html>
